--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "This package contains a set of reusable components based on next.js components and uses tailwindcss for styling",
   "main": "index.js",
   "scripts": {
-    "test": "run test",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test": "run test"
   },
   "repository": {
     "type": "git",
@@ -33,8 +31,15 @@
     "react": "^19.0.0"
   },
   "dependencies": {
+    "copyfiles": "^2.4.1",
+    "fs-extra": "^11.3.0",
+    "inquirer": "^12.4.2",
     "libphonenumber-js": "^1.12.5",
     "lucide-react": "^0.477.0",
+    "path": "^0.12.7",
     "react-country-flag": "^3.1.0"
+  },
+  "bin": {
+    "init": "./cli.js"
   }
 }
