--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reusable-nextjs-components",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This package contains a set of reusable components based on next.js components and uses tailwindcss for styling",
   "main": "index.js",
   "scripts": {
@@ -40,6 +40,6 @@
     "react-country-flag": "^3.1.0"
   },
   "bin": {
-    "init": "cli.js"
+    "reusable-next": "cli.js"
   }
 }
