--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "react": "^19.0.0"
   },
   "dependencies": {
+    "@inquirer/prompts": "^7.3.2",
     "copyfiles": "^2.4.1",
     "fs-extra": "^11.3.0",
-    "inquirer": "^12.4.2",
     "libphonenumber-js": "^1.12.5",
     "lucide-react": "^0.477.0",
     "path": "^0.12.7",
